[package]
name = "patiently"
description = "A simple parallel job queue"
version = "0.1.0"
readme = "README.md"
license = "Unlicense"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
enum-map = "2.0.1"
inotify = { version = "0.10.0", default-features = false }
liveterm = "0.3.0"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
