[package]
name = "patiently"
description = "A simple parallel job queue"
version = "0.1.0"
readme = "README.md"
license = "Unlicense"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
bpaf = { version = "0.9.15", features = ["derive"] }
liveterm = "0.3.0"
rustix = { version = "0.38.39", features = ["fs"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
